--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/og": "^0.8.5",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
